# glissando

./: .gitignore  LICENSE  README.md  pyproject.toml
glissando/: cli.py  parser.py  styles.css
src/glissando/: cli.py  generator.py  parser.py  slides.js  styles.css
